--- a/pages/page1.html
+++ b/pages/page1.html
@@ -13,6 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit saepe est voluptatibus explicabo amet dolorem
         similique voluptates maxime ipsa modi quo eaque praesentium earum odit quia, voluptate exercitationem minus
         illum!</p>
+    <a href="/page2">Page2</a>
 </body>
 
 </html>
